add_custom_target(sdchecks-deps ALL DEPENDS
		${CMAKE_CURRENT_BINARY_DIR}/deps
		${CMAKE_CURRENT_BINARY_DIR}/deps2.7
		${CMAKE_CURRENT_BINARY_DIR}/deps2.6)
add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/deps
		COMMAND ${CMAKE_COMMAND} -E env PATH="${DRAIOS_DEPENDENCIES_DIR}/postgresql-9.4.15/target/bin:$ENV{PATH}" ${DRAIOS_DEPENDENCIES_DIR}/Python-2.7.14/target/bin/python ${DRAIOS_DEPENDENCIES_DIR}/Python-2.7.14/target/bin/pip install -I --target=${CMAKE_CURRENT_BINARY_DIR}/deps --upgrade -r ${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt)
add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/deps2.7
		COMMAND ${CMAKE_COMMAND} -E env PATH="${DRAIOS_DEPENDENCIES_DIR}/postgresql-9.4.15/target/bin:$ENV{PATH}" ${DRAIOS_DEPENDENCIES_DIR}/Python-2.7.14/target/bin/python ${DRAIOS_DEPENDENCIES_DIR}/Python-2.7.14/target/bin/pip install -I --target=${CMAKE_CURRENT_BINARY_DIR}/deps2.7 --upgrade -r ${CMAKE_CURRENT_SOURCE_DIR}/requirements-native.txt
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/requirements-native.txt)
add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/deps2.6
		COMMAND ${CMAKE_COMMAND} -E env PATH="${DRAIOS_DEPENDENCIES_DIR}/postgresql-9.4.15/target/bin:$ENV{PATH}" ${DRAIOS_DEPENDENCIES_DIR}/Python-2.6.9/target/bin/python ${DRAIOS_DEPENDENCIES_DIR}/Python-2.6.9/target/bin/pip install -I --target=${CMAKE_CURRENT_BINARY_DIR}/deps2.6 --upgrade -r ${CMAKE_CURRENT_SOURCE_DIR}/requirements-native.txt
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/requirements-native.txt)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python
		COMPONENT agent FILES_MATCHING PATTERN *.py
		PATTERN LICENSE
		PATTERN tests.py EXCLUDE
		PATTERN resources EXCLUDE)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps
		COMPONENT agent FILES_MATCHING PATTERN *.py)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps
		COMPONENT agent FILES_MATCHING PATTERN *.pth)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps
		COMPONENT agent FILES_MATCHING PATTERN *.so)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps2.7/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps2.7
		COMPONENT agent FILES_MATCHING PATTERN *.py)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps2.7/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps2.7
		COMPONENT agent FILES_MATCHING PATTERN *.pth)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps2.7/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps2.7
		COMPONENT agent FILES_MATCHING PATTERN *.so)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps2.6/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps2.6
		COMPONENT agent FILES_MATCHING PATTERN *.py)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps2.6/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps2.6
		COMPONENT agent FILES_MATCHING PATTERN *.pth)
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/deps2.6/
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/python-deps2.6
		COMPONENT agent FILES_MATCHING PATTERN *.so)

install(FILES
		${DRAIOS_DEPENDENCIES_DIR}/postgresql-9.4.15/target/lib/libpq.so.5.7
		DESTINATION ${DRAIOS_BIN_PREFIX}/lib/ COMPONENT agent RENAME libpq.so.5)
install(PROGRAMS sdchecks
	DESTINATION ${DRAIOS_BIN_PREFIX}/bin
	COMPONENT agent)
